# scanner

./: Cargo.toml  LICENSE  README.md  flow.txt  scanner.toml
.github/workflows/: ci.yml  release.yml
scripts/: cargo-to-gha.sh  install.sh  update-brew-formula.sh
src/: agents.rs  cli.rs  config.rs  demo.rs  error.rs  fix.rs  gha.rs  main.rs  pool.rs  process.rs  runner.rs  ui.rs
src/runner/: execution.rs  mod.rs  process_runner.rs  selection.rs
src/ui/: app.rs  cli.rs  events.rs  mod.rs  render.rs  sanitize.rs  state.rs
