[package]
name = "scanner-rs"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
crossterm = "0.29.0"
num_cpus = "1.17.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync"] }
toml = "0.9.8"
serde_json = "1.0.132"
atty = "0.2.14"
which = "6.0.1"
dirs = "5.0.1"
arboard = "3.4.0"
tokio-util = "0.7"
thiserror = "2.0"
